--- a/index.html
+++ b/index.html
@@ -92,16 +92,45 @@
             <h1 data-aos="fade-up">Deliciosos Crepes Saludables</h1>
             <p data-aos="fade-up" data-aos-delay="100">Crepes de avena  y chia de rápida preparación</p>
             <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-              <a href="#menu" class="btn-get-started">Ver receta</a>
+              <a href="#menu" class="btn-get-started">Ver recetas</a>
               <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Ver Video</span></a>
             </div>
           </div>
           <div class="col-lg-5 order-1 order-lg-2 hero-img" data-aos="zoom-out">
+            <div id="carouselExampleCaptions" class="carousel slide">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              </div>
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="assets/img/crepe.jfif" class="img-fluid animated" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/img/galletas.jpg" class="img-fluid animated" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/img/tikkamasala.jpg" class="img-fluid animated" alt="...">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+            </div>
+            <!--
             <img src="assets/img/crepe.jfif" class="img-fluid animated" alt="Crepe">
           </div>
         </div>
       </div>
-
+-->
     </section><!-- /Hero Section -->
 
     <!-- About Section -->
